--- a/package.json
+++ b/package.json
@@ -20,5 +20,7 @@
     "mongoose": "^8.6.2",
     "morgan": "^1.10.0",
     "override-method": "^3.0.0"
-  }
+  },
+  "engines": {
+    "node": "20.11.1"}
 }
